--- a/app/globals.css
+++ b/app/globals.css
@@ -62,12 +62,6 @@ body::-webkit-scrollbar {
     background-color: rgba(75, 85, 99, 0.8);
 }
 
-body.modal-open {
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-}
 
 /* 修复移动端安全区域 */
 body {
@@ -75,6 +69,8 @@ body {
     padding-top: calc(env(safe-area-inset-top)); */
     padding-bottom: calc(constant(safe-area-inset-bottom));
     padding-bottom: calc(env(safe-area-inset-bottom));
+    background:rgba(75, 85, 99, 0.8);
+    background-attachment: fixed;
 }
 
 
@@ -812,8 +808,7 @@ main#app::-webkit-scrollbar {
     width: 100%;
     min-height: 100vh;
     /* 关键：为内容添加顶部安全区域，而不是body */
-    padding-top: calc(constant(safe-area-inset-top));
-    padding-top: calc(env(safe-area-inset-top));
+  
 }
 
 /* 主应用容器适配 */
@@ -825,8 +820,11 @@ main#app {
     scrollbar-width: none;
     -ms-overflow-style: none;
     flex: 1;
+    min-height: 100vh;
     /* 确保背景色继承 */
     background: inherit;
+    padding-top: calc(constant(safe-area-inset-top));
+    padding-top: calc(env(safe-area-inset-top));
 }
 
 header {
