--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,7 @@ body {
     padding-top: calc(env(safe-area-inset-top)); */
     padding-bottom: calc(constant(safe-area-inset-bottom));
     padding-bottom: calc(env(safe-area-inset-bottom));
+    background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
     background-attachment: fixed;
 }
 
