--- a/app/globals.css
+++ b/app/globals.css
@@ -789,16 +789,10 @@ main#app::-webkit-scrollbar {
 
 /* 主应用容器适配 */
 main#app {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    flex: 1;
+  width: 100%;
+  min-height: 100%;
 }
 
-header {
-	border-top: 0.2em solid #a52730;
-	border-bottom: 0.2em solid #fff;
+body{
+    background: #000;
 }
