--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,12 @@
 html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
     font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
     color: #333;
+    /* 隐藏滚动条但保持滚动功能 */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
 }
 
 body::-webkit-scrollbar {
@@ -58,6 +62,15 @@ body::-webkit-scrollbar {
     background-color: rgba(75, 85, 99, 0.8);
 }
 
+
+/* 修复移动端安全区域 */
+body {
+    /* padding-top: calc(constant(safe-area-inset-top));
+    padding-top: calc(env(safe-area-inset-top)); */
+    padding-bottom: calc(constant(safe-area-inset-bottom));
+    padding-bottom: calc(env(safe-area-inset-bottom));
+    background:#333;
+}
 
 
 main#app::-webkit-scrollbar {
@@ -789,6 +802,14 @@ main#app::-webkit-scrollbar {
 
 /* 主应用容器适配 */
 main#app {
-  width: 100%;
-  min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    flex: 1;
+    /* min-height: 100vh; */
+    /* 确保背景色继承 */
+    background: inherit;
 }
