--- a/app/globals.css
+++ b/app/globals.css
@@ -65,8 +65,8 @@ body::-webkit-scrollbar {
 
 /* 修复移动端安全区域 */
 body {
-    /* padding-top: calc(constant(safe-area-inset-top));
-    padding-top: calc(env(safe-area-inset-top)); */
+    padding-top: calc(constant(safe-area-inset-top));
+    padding-top: calc(env(safe-area-inset-top));
     padding-bottom: calc(constant(safe-area-inset-bottom));
     padding-bottom: calc(env(safe-area-inset-bottom));
     background:#333;
