--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,7 @@ body {
     padding-top: calc(env(safe-area-inset-top));
     padding-bottom: calc(constant(safe-area-inset-bottom));
     padding-bottom: calc(env(safe-area-inset-bottom));
+    background: #6E59E7;
 }
 
 
@@ -793,11 +794,6 @@ main#app::-webkit-scrollbar {
     .pwa-mini-icon {
         display: none !important;
     }
-}
-
-/* 毛玻璃效果和径向渐变支持 */
-.bg-gradient-radial {
-    background: radial-gradient(circle, var(--tw-gradient-stops));
 }
 
 /* 主应用容器适配 */
