--- a/app/globals.css
+++ b/app/globals.css
@@ -526,10 +526,10 @@ main#app::-webkit-scrollbar {
 
 @keyframes shimmer {
     0% {
-        transform: translateX(-100%);
+        background-position: -200% 0;
     }
     100% {
-        transform: translateX(100%);
+        background-position: 200% 0;
     }
 }
 
